# pmrapp

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: api.rs  lib.rs  model.rs
client/src/app/: content.rs  mod.rs
pmrapp/: Cargo.toml
pmrapp/client/src/: error.rs
pmrapp/client/src/app/: content.rs
pmrapp/server/: Cargo.toml
pmrapp/server/src/: config.rs
pmrapp/server/src/http/: mod.rs  workspace.rs
server/: Cargo.toml
server/src/: main.rs  page.rs
server/src/http/: error.rs  mod.rs  page.rs  workspace.rs
server/src/http/api/: workspace.rs
