[package]
name = "client"
version = "0.0.0"
edition = "2021"
authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
license = "AGPL-3.0"

[dependencies]
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
console_log = { version ="0.2", features = ["color"], optional = true }
log = "0.4"
sauron = "0.50.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["serde_derive"]}
wasm-bindgen-futures = { version = "0.4.32", optional = true }
wasm-bindgen = { version = "0.2.82", optional = true}
