[package]
name = "client"
version = "0.0.0"
edition = "2021"
authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
license = "AGPL-3.0"

[dependencies]
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
console_log = { version ="0.2", features = ["color"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true}
derive_more = "0.99.16"
log = "0.4"
pmrmodel_base = "0.1.0"
reqwest = { version = "0.11", features = ["json"] }
sauron = "0.51.0"
serde = { version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
thiserror = "1.0"
wasm-bindgen-futures = { version = "0.4.32", optional = true }
wasm-bindgen = { version = "0.2.82", optional = true}

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "console_error_panic_hook", "console_log"]

[dependencies.web-sys]
version = "0.3"
features = ["PopStateEvent"]
