[package]
name = "server"
version = "0.0.0"
edition = "2021"
authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
license = "AGPL-3.0"

[dependencies]
axum = "0.4.8"
client = { path = "../client", default-features = false }
tokio = { version = "1.20", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
