[package]
name = "server"
version = "0.0.0"
edition = "2021"
authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0"
axum = "0.4.8"
clap = { version = "3.2", features = [ "derive", "env" ] }
client = { path = "../client", default-features = false }
dotenv = "0.15.0"
pmrmodel = "0.1.0"
tokio = { version = "1.20", features = [ "full" ] }
tower = "0.4"
serde = "1.0"
serde_json = "1.0"
sqlx = "0.5.5"
thiserror = "1.0"
