[package]
name = "server"
version = "0.0.0"
edition = "2021"
authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0"
axum-macros = "0.3.0"
axum = "0.6.1"
clap = { version = "3.2", features = [ "derive", "env" ] }
client = { path = "../client", default-features = false }
dotenv = "0.15.0"
log = { version = "0.4", features = ["std", "serde"] }
pmrmodel = "0.1.0"
pmrmodel_base = "0.1.0"
pmrrepo = "0.1.0"
tokio = { version = "1.20", features = [ "full" ] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls" ] }
stderrlog = "0.5.1"
thiserror = "1.0"
